2008-11-26  Werner Koch  <wk@g10code.com>

	* config-dialog.c (start_key_manager): Remove.
	* ext-commands.cpp (DoCommand): Do not use start_key_manager as a
	fallback.

	* olflange.cpp (GpgolExt): Show new version warning only once.

	* dialogs.rc: Do not display the logo.  Move version info around.
	* dialogs.h (IDC_G10CODE_STRING): New.
	* olflange-dlgs.cpp (GPGOptionsDlgProc): Active product page by a
	click on IDC_G10CODE_STRING.
	(set_labels): Remove the build date from the Version field.

2008-11-14  Werner Koch  <wk@g10code.com>

	* dialogs.rc: Remove preview-decrypt check button.
	* olflange-dlgs.cpp (set_labels): Ditto.

2008-11-13  Werner Koch  <wk@g10code.com>

	* engine.c (FILTER_BUFFER_SIZE): Increase from 4k to 128k.
	(switch_threads, clear_switch_threads): Remove.
	(engine_filter): Pulse event only if anything happened.  Break
	loop if input data has been put completely into the buffer.  Add a
	short delay for an idle loop.
	* engine-assuan.c (work_item_s): Increase buffer from 1k to 8k.
	(switch_threads, clear_switch_threads): Remove.

2008-11-10  Werner Koch  <wk@g10code.com>

	* engine.c (engine_init): Allow the user to try again if the
	server did not come up.
	* engine-assuan.c (connect_uiserver, op_assuan_init): Add a hack
	to reset the retry counter.

2008-11-03  Werner Koch  <wk@g10code.com>

	* mimemaker.c (do_mime_sign): Add arg SESSION_NUMBER and pass it
	to the sign operation.  Set session title.
	(mime_sign): Create a new session number.
	(mime_sign_encrypt): Pass a session number and title to the engine.
	(mime_encrypt): Ditto.
	* engine-assuan.c (op_assuan_encrypt, op_assuan_sign): Send
	session info.

2008-10-29  Werner Koch  <wk@g10code.com>

	* engine.c (engine_filter): Collect more data in the in buffer.
	* mimemaker.c (write_b64): Buffer up to 2k of output.

2008-10-27  Werner Koch  <wk@g10code.com>

	* mimemaker.c (mime_encrypt): Check for an empty message before
	creating the filter.  Return a suitable error code.